Added ability to move notes via buttons

--- a/react-demo/vr/index.html
+++ b/react-demo/vr/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
+    <div style="width: 50%; height: 40%" id="test"></div>
+
     <!-- When you're ready to deploy your app, update this line to point to your compiled client.bundle.js -->
     <script src="./client.bundle?platform=vr"></script>
     <script>
@@ -14,7 +16,7 @@
         // your compiled index.bundle.js
         '../index.vr.bundle?platform=vr&dev=true',
         // Attach it to the body tag
-        document.body
+        document.getElementById("test")
       );
     </script>
   </body>
