--- a/ServerProto/vr/index.html
+++ b/ServerProto/vr/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="../static_assets/style.css" type="text/css" />
   </head>
-  <body>
+  <body id="ServerProto">
 
     <!-- When you're ready to deploy your app, update this line to point to your compiled client.bundle.js -->
     <script src="./client.bundle?platform=vr"></script>
