--- a/ServerProto/vr/index.html
+++ b/ServerProto/vr/index.html
@@ -8,6 +8,7 @@
   <body id="ServerProto">
 
     <!-- When you're ready to deploy your app, update this line to point to your compiled client.bundle.js -->
+    <!-- <script src="./build/client.bundle.js"></script> -->
     <script src="./client.bundle?platform=vr"></script>
     <script>
       // Initialize the React VR application
@@ -15,6 +16,7 @@
         // When you're ready to deploy your app, update this line to point to
         // your compiled index.bundle.js
         '../index.vr.bundle?platform=vr&dev=true',
+        // './build/index.bundle.js',
         // Attach it to the body tag
         document.body
         // document.getElementById("reactvr")
