--- a/motherload/raw-reactvr/vr/index.html
+++ b/motherload/raw-reactvr/vr/index.html
@@ -11,11 +11,6 @@
     <script src="./client.bundle?platform=vr"></script>
     <script>
 
-      // // gets the url?key=values
-      // function getQueryStringValue (key) {  
-      //   return decodeURIComponent(window.location.search.replace(new RegExp("^(?:.*[&\\?]" + encodeURIComponent(key).replace(/[\.\+\*]/g, "\\$&") + "(?:\\=([^&]*))?)?.*$", "i"), "$1"));  
-      // }
-
       // let query = getQueryStringValue("room");
       // if (!query) {
       //   query = "0";
@@ -25,7 +20,7 @@
       ReactVR.init(
         // When you're ready to deploy your app, update this line to point to
         // your compiled index.bundle.js
-        '../index.vr.bundle?platform=vr&dev=true&room=0',
+        '../index.vr.bundle?platform=vr&dev=true',
         // '../index.vr.bundle?platform=vr&dev=true',
         // Attach it to the body tag
         document.body
